#2 continuacao widget e ajustes

--- a/feature/widget/src/main/res/xml-v31/marker_widget_info_small.xml
+++ b/feature/widget/src/main/res/xml-v31/marker_widget_info_small.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/glance_default_loading_layout"
-    android:minResizeWidth="57dp"
-    android:minResizeHeight="51dp"
+    android:minResizeWidth="@dimen/widget_small_width"
+    android:minResizeHeight="@dimen/widget_small_height"
     android:targetCellHeight="1"
-    android:targetCellWidth="1"
-    android:maxResizeWidth="359dp"
-    android:maxResizeHeight="455dp" />
+    android:targetCellWidth="1"/>
