--- a/feature/widget/src/main/res/xml-v31/marker_widget_info_medium.xml
+++ b/feature/widget/src/main/res/xml-v31/marker_widget_info_medium.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/glance_default_loading_layout"
-    android:minResizeWidth="57dp"
-    android:minResizeHeight="51dp" />
+    android:minWidth="@dimen/widget_medium_width"
+    android:minHeight="@dimen/widget_medium_height"
+    android:targetCellHeight="2"
+    android:targetCellWidth="3"/>
